--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">Project10_2</string>
     <string name="btn_done">투표 종료</string>
+    <string name="btn_back">돌아가기</string>
+    <string name="title">영화 선호도 투표</string>
 </resources>
